--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic HTML Page</title>
+    <title>Basic HTML with CSS</title>
+    <!-- Link to external stylesheet -->
+    <link rel="stylesheet" href="styles.css">
+    <img src="./profile_saipavan.jpg">
 </head>
 <body>
     <header>
         <h1>Welcome to My Website</h1>
     </header>
     <main>
-        <p>This is a basic HTML page structure.</p>
-        <a href="https://www.example.com">Visit Example</a>
+        <p>This page has a basic stylesheet.</p>
     </main>
     <footer>
         <p>&copy; 2024 Your Name</p>
